Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.1
-
4df52eee2b40244ba1a3d115a43ed51cfd742105
Description
When specifying a scale for a Menu it will be positioned as if the scale was not set, and therefore can be placed unexpectedly. If you have a scale of 0.5 and click next to the right hand edge of the window then it will appear away from the edge with a gap between it and the window edge.
Attachments
Issue Links
- relates to
-
QTBUG-70939 QML ComboBox popup menu doesn't respect scaling
- Closed