Menu: account for the scale when getting the size before positioning

Fixes: QTBUG-73687
Change-Id: Id2d6a6b5c6651337ab7ae26d07011160b79654bf
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>